Name:               yow2011-test
Version:            0.0.1
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           Tests for the material for the Introduction to Pure Functional Programming Course at YOW! 2011 conference
Category:           Education
Description:        Tests for the material for the Introduction to Pure Functional Programming Course at YOW! 2011 conference
Homepage:           https://github.com/tonymorris/yow2011
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/yow2011.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          yow2011-test
  Hs-Source-Dirs:  
                    ../src src

  Main-Is: 
                    Main.hs

  Ghc-Options:
                    -O2
                    -Wall
                    -fhpc
                    -fwarn-tabs
  
  Build-Depends:  
                   base < 5 && >= 3
                   , QuickCheck
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit

